--- a/colsubsidio-front/package.json
+++ b/colsubsidio-front/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@fortawesome/angular-fontawesome": "^0.11.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.1.1",
     "jquery": "^3.6.0",
+    "mdb-angular-ui-kit": "^2.3.0",
     "ngx-popper": "^7.0.0",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
