--- a/colsubsidio-front/package.json
+++ b/colsubsidio-front/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.1.1",
+    "crypto-js": "^4.1.1",
     "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^2.3.0",
     "ngx-popper": "^7.0.0",
@@ -41,7 +42,9 @@
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^18.0.3",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
